[gd_scene load_steps=32 format=1]

[ext_resource path="res://slatten_time_management.gd" type="Script" id=1]
[ext_resource path="res://ladder.png" type="Texture" id=2]
[ext_resource path="res://pixel_arm.png" type="Texture" id=3]
[ext_resource path="res://pixel_leg.png" type="Texture" id=4]
[ext_resource path="res://computer.png" type="Texture" id=5]
[ext_resource path="res://pixel_crotch.png" type="Texture" id=6]
[ext_resource path="res://pixel_torso.png" type="Texture" id=7]
[ext_resource path="res://pixel.png" type="Texture" id=8]
[ext_resource path="res://blue_ghostie.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.8182, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 158.779, 346.391 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 150.422, 310.242 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 151.896, 337.311 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 11.0221 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10.0625, 123.233 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 10, 60.0219 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 36.9747, 65.0903 )

[sub_resource type="RectangleShape2D" id=13]

custom_solver_bias = 0.0
extents = Vector2( 10, 6.23065 )

[sub_resource type="RectangleShape2D" id=14]

custom_solver_bias = 0.0
extents = Vector2( 102.778, 59.6666 )

[sub_resource type="RectangleShape2D" id=15]

custom_solver_bias = 0.0
extents = Vector2( 69.2563, 5.51279 )

[sub_resource type="RectangleShape2D" id=16]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=17]

custom_solver_bias = 0.0
extents = Vector2( 10, 57.8135 )

[sub_resource type="RectangleShape2D" id=18]

custom_solver_bias = 0.0
extents = Vector2( 10, 9.94118 )

[sub_resource type="RectangleShape2D" id=19]

custom_solver_bias = 0.0
extents = Vector2( 10, 2.98364 )

[sub_resource type="RectangleShape2D" id=20]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=21]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=22]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="slatten_time_management" type="Node2D"]

transform/pos = Vector2( 512.405, 304.228 )
transform/scale = Vector2( 16.0619, 9.63964 )
script/script = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="."]

transform/pos = Vector2( -11.7599, 21.6397 )
transform/scale = Vector2( 0.00815063, 0.027132 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite6" groups=[
"up",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 11.9613, 0, 0, 36.6789, -20.3525, -14.1678 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite6/StaticBody2D"]

transform/pos = Vector2( -20.3525, -14.1678 )
transform/scale = Vector2( 11.9613, 36.6789 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite7" type="Sprite" parent="."]

transform/pos = Vector2( 13.5642, 21.3574 )
transform/scale = Vector2( 0.00815063, 0.027132 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite7" groups=[
"up",
]]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -18.1162, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite7/StaticBody2D"]

transform/pos = Vector2( -18.1162, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite8" type="Sprite" parent="."]

transform/pos = Vector2( 19.0694, 3.83988 )
transform/scale = Vector2( 0.00815063, 0.0228145 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite8" groups=[
"up",
]]

input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1.19284, -16.9277, 28.6476 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite8/StaticBody2D"]

transform/pos = Vector2( -16.9277, 28.6476 )
transform/scale = Vector2( 1, 1.19284 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite10" type="Sprite" parent="."]

transform/pos = Vector2( -18.3764, 4.4178 )
transform/scale = Vector2( 0.00815063, 0.0220865 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite10" groups=[
"up",
]]

input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 13.3468, 0, 0, 35.0508, -20.8473, -15.6174 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite10/StaticBody2D"]

transform/pos = Vector2( -20.8473, -15.6174 )
transform/scale = Vector2( 13.3468, 35.0508 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite11" type="Sprite" parent="."]

transform/pos = Vector2( -23.9069, -11.5687 )
transform/scale = Vector2( 0.00815063, 0.0229439 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite11" groups=[
"up",
]]

input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1.0475, -11.2303, 18.1182 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite11/StaticBody2D"]

transform/pos = Vector2( -11.2303, 18.1182 )
transform/scale = Vector2( 1, 1.0475 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite9" type="Sprite" parent="."]

transform/pos = Vector2( 24.2377, -11.4806 )
transform/scale = Vector2( 0.00815063, 0.0205866 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite9" groups=[
"up",
]]

input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 14.9015, 0, 0, 34.7627, -19.0267, 46.3849 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite9/StaticBody2D"]

transform/pos = Vector2( -19.0267, 46.3849 )
transform/scale = Vector2( 14.9015, 34.7627 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="floor" type="Sprite" parent="."]

transform/pos = Vector2( 0.427444, 40.7039 )
transform/scale = Vector2( 0.644636, 0.185922 )

[node name="StaticBody2D" type="StaticBody2D" parent="floor" groups=[
"down",
]]

transform/pos = Vector2( 0.316196, -0.107553 )
transform/scale = Vector2( 3.12162, 1.58248 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 3.21065, 0, 0, 3.25109, -0.115834, -0.603791 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor/StaticBody2D"]

transform/pos = Vector2( -0.115834, -0.603791 )
transform/scale = Vector2( 3.21065, 3.25109 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -19.6501, 12.7376 )
transform/scale = Vector2( 0.122507, 0.016711 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite" groups=[
"down",
]]

input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 10.0004, -0.0100923, 0.00100919, 0.999999, -0.398954, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D"]

transform/pos = Vector2( -0.398954, 0 )
transform/rot = 0.0578222
transform/scale = Vector2( 10.0004, 1 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="Sprite" groups=[
"down",
"right_push",
]]

input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 6.66696, 0, 0, 1.98159, -32.1532, -4.29432 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D1"]

transform/pos = Vector2( -32.1532, -4.29432 )
transform/scale = Vector2( 6.66696, 1.98159 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="Sprite3" type="Sprite" parent="."]

transform/pos = Vector2( 19.947, 12.7376 )
transform/scale = Vector2( 0.122507, 0.016711 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite3" groups=[
"down",
]]

input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 10.0311, 0, 0, 4.98329, 0.307356, -2.56297 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/StaticBody2D"]

transform/pos = Vector2( 0.307356, -2.56297 )
transform/scale = Vector2( 10.0311, 4.98329 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="Sprite3" groups=[
"down",
"left_push",
]]

input/pickable = false
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 6.71942, 0, 0, 4.69016, 29.6329, -6.37393 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/StaticBody2D1"]

transform/pos = Vector2( 29.6329, -6.37393 )
transform/scale = Vector2( 6.71942, 4.69016 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="Sprite4" type="Sprite" parent="."]

transform/pos = Vector2( 23.368, -3.53336 )
transform/scale = Vector2( 0.0902216, 0.0096192 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite4" groups=[
"down",
]]

input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 2.69885, 0, 0, 1, -0.781513, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite4/StaticBody2D"]

transform/pos = Vector2( -0.781513, 0 )
transform/scale = Vector2( 2.69885, 1 )
shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="Sprite4" groups=[
"down",
"left_push",
]]

input/pickable = false
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( 6.54582, 0, 0, -8.26213, 34.0398, 0.371338 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite4/StaticBody2D1"]

transform/pos = Vector2( 34.0398, 0.371338 )
transform/scale = Vector2( 6.54582, -8.26213 )
shape = SubResource( 13 )
trigger = false
_update_shape_index = 0

[node name="Sprite5" type="Sprite" parent="."]

transform/pos = Vector2( 27.2167, -18.2829 )
transform/scale = Vector2( 0.0478859, 0.00961926 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite5" groups=[
"down",
]]

input/pickable = false
shapes/0/shape = SubResource( 14 )
shapes/0/transform = Matrix32( 0.987528, 0, 0, 1, 1.31927, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite5/StaticBody2D"]

transform/pos = Vector2( 1.31927, 0 )
transform/scale = Vector2( 0.987528, 1 )
shape = SubResource( 14 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="Sprite5" groups=[
"down",
"left_push",
]]

input/pickable = false
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 0.606187, 0, 0, 9.19439, 55.5919, 4.26062 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite5/StaticBody2D1"]

transform/pos = Vector2( 55.5919, 4.26062 )
transform/scale = Vector2( 0.606187, 9.19439 )
shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Sprite1" type="Sprite" parent="."]

transform/pos = Vector2( -23.6912, -3.0763 )
transform/scale = Vector2( 0.0840203, 0.0123476 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite1" groups=[
"down",
]]

input/pickable = false
shapes/0/shape = SubResource( 16 )
shapes/0/transform = Matrix32( 10.0282, 0, 0, 5.5271, -0.116732, 0.352846 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite1/StaticBody2D"]

transform/pos = Vector2( -0.116732, 0.352846 )
transform/scale = Vector2( 10.0282, 5.5271 )
shape = SubResource( 16 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="Sprite1" groups=[
"down",
"right_push",
]]

input/pickable = false
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( 5.87301, 0, 0, 1, -39.0457, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite1/StaticBody2D1"]

transform/pos = Vector2( -39.0457, 0 )
transform/scale = Vector2( 5.87301, 1 )
shape = SubResource( 17 )
trigger = false
_update_shape_index = 0

[node name="Sprite2" type="Sprite" parent="."]

transform/pos = Vector2( -26.9443, -18.9481 )
transform/scale = Vector2( 0.0476413, 0.00914123 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2" groups=[
"down",
]]

input/pickable = false
shapes/0/shape = SubResource( 18 )
shapes/0/transform = Matrix32( 10.0711, 0, 0, 6.04374, -0.0470581, -0.987671 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/StaticBody2D"]

transform/pos = Vector2( -0.0470581, -0.987671 )
transform/scale = Vector2( 10.0711, 6.04374 )
shape = SubResource( 18 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="Sprite2" groups=[
"down",
"right_push",
]]

input/pickable = false
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 4.9642, 0, 0, 20.082, -51.5346, 3.63385 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/StaticBody2D1"]

transform/pos = Vector2( -51.5346, 3.63385 )
transform/scale = Vector2( 4.9642, 20.082 )
shape = SubResource( 19 )
trigger = false
_update_shape_index = 0

[node name="lou" type="Node2D" parent="."]

transform/pos = Vector2( 0.217655, 22.2306 )
transform/scale = Vector2( 0.0649728, 0.178233 )

[node name="Sprite14" type="Sprite" parent="lou"]

transform/pos = Vector2( -20.7711, -3.49052 )
transform/rot = -51.6816
transform/scale = Vector2( 0.300574, 0.304012 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite16" type="Sprite" parent="lou"]

transform/pos = Vector2( -6.84311, 19.605 )
transform/rot = -10.8952
transform/scale = Vector2( 0.322879, 0.282704 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite17" type="Sprite" parent="lou"]

transform/pos = Vector2( 4.43701, 19.6008 )
transform/rot = 6.76718
transform/scale = Vector2( 0.323252, 0.313685 )
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite15" type="Sprite" parent="lou"]

transform/pos = Vector2( 19.1325, -3.8644 )
transform/rot = 52.3878
transform/scale = Vector2( 0.299532, 0.307618 )
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite18" type="Sprite" parent="lou"]

transform/pos = Vector2( -0.499115, -5.56326 )
transform/rot = -0.0958171
transform/scale = Vector2( 0.552294, 0.2994 )
texture = ExtResource( 5 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite13" type="Sprite" parent="lou"]

transform/pos = Vector2( -2.8653, 4.73611 )
transform/scale = Vector2( 0.306069, 0.19767 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite12" type="Sprite" parent="lou"]

transform/pos = Vector2( -2.7594, -4.7635 )
transform/scale = Vector2( 0.478678, 0.28094 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite 2" type="Sprite" parent="lou"]

transform/pos = Vector2( -1.73157, -21.7064 )
transform/scale = Vector2( 0.478678, 0.28094 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="lou_colliders" type="RigidBody2D" parent="lou"]

input/pickable = false
shapes/0/shape = SubResource( 20 )
shapes/0/transform = Matrix32( 1.85125, 0, 0, 3.17352, -4.28547, -1.08114 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="lou/lou_colliders"]

transform/pos = Vector2( -4.28547, -1.08114 )
transform/scale = Vector2( 1.85125, 3.17352 )
shape = SubResource( 20 )
trigger = false
_update_shape_index = 0

[node name="vaccuum" type="RigidBody2D" parent="lou"]

input/pickable = false
shapes/0/shape = SubResource( 20 )
shapes/0/transform = Matrix32( 1.71572, 0, 0, 1.17524, -32.4117, -5.2811 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 20 )
shapes/1/transform = Matrix32( 1.79961, 0, 0, 1.17524, 25.4474, -5.97809 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="lou/vaccuum"]

transform/pos = Vector2( -32.4117, -5.2811 )
transform/scale = Vector2( 1.71572, 1.17524 )
shape = SubResource( 20 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="lou/vaccuum"]

transform/pos = Vector2( 25.4474, -5.97809 )
transform/scale = Vector2( 1.79961, 1.17524 )
shape = SubResource( 20 )
trigger = false
_update_shape_index = 1

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"left",
]]

transform/pos = Vector2( -42.496, -5.97999 )
transform/scale = Vector2( -0.328001, 1.18687 )
input/pickable = false
shapes/0/shape = SubResource( 21 )
shapes/0/transform = Matrix32( 1.95261, 0, 0, 2.68284, -12.384, 5.51749 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( -12.384, 5.51749 )
transform/scale = Vector2( 1.95261, 2.68284 )
shape = SubResource( 21 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="." groups=[
"right",
]]

transform/pos = Vector2( 34.3064, -4.93533 )
transform/scale = Vector2( -0.328001, 1.18687 )
input/pickable = false
shapes/0/shape = SubResource( 21 )
shapes/0/transform = Matrix32( 1.95261, 0, 0, 2.68284, -12.384, 4.41727 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D1"]

transform/pos = Vector2( -12.384, 4.41727 )
transform/scale = Vector2( 1.95261, 2.68284 )
shape = SubResource( 21 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="ghostie" type="Sprite" parent="."]

transform/pos = Vector2( -29.4419, -24.5859 )
transform/scale = Vector2( 0.017158, 0.0366978 )
texture = ExtResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="ghostie" groups=[
"ghostie",
]]

input/pickable = false
shapes/0/shape = SubResource( 22 )
shapes/0/transform = Matrix32( 6.36571, 0, 0, 8.85565, -12.4333, -8.73095 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ghostie/StaticBody2D"]

transform/pos = Vector2( -12.4333, -8.73095 )
transform/scale = Vector2( 6.36571, 8.85565 )
shape = SubResource( 22 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="ghostie_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true

[node name="suck_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="timeout" from="ghostie_timer" to="." method="_on_ghostie_timer_timeout"]

[connection signal="timeout" from="suck_timer" to="." method="_on_suck_timer_timeout"]


